updated feluda class and example notebook

--- a/src/notebooks/search_similar_videos.ipynb
+++ b/src/notebooks/search_similar_videos.ipynb
@@ -8,14 +8,7 @@
    "source": [
     "import sys\n",
     "import os\n",
-    "from core.operators import vid_vec_rep_clip\n",
-    "from core.models.media_factory import VideoFactory\n",
-    "from core.store.es_vec import ES\n",
-    "from core.config import *\n",
-    "from core.models.media import MediaType\n",
-    "from datetime import datetime\n",
-    "import pprint\n",
-    "pp = pprint.PrettyPrinter(indent=4)"
+    "from core.feluda import Feluda,ComponentType"
    ]
   },
   {
@@ -25,21 +18,6 @@
    "outputs": [],
    "source": [
     "sys.path.append(os.path.abspath('../../app'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "video_links = [\n",
-    "    \"https://github.com/aatmanvaidya/audio-files/raw/main/feluda-media/en-speech.mp4\",\n",
-    "    \"https://github.com/aatmanvaidya/audio-files/raw/main/feluda-media/hi-speech.mp4\",\n",
-    "    \"https://github.com/aatmanvaidya/audio-files/raw/main/feluda-media/ta-speech.mp4\"\n",
-    "]\n",
-    "\n",
-    "file_names = [x.split('/')[-1] for x in video_links]\n"
    ]
   },
   {
@@ -63,133 +41,21 @@
       "/usr/app/venv/lib/python3.11/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
       "  warnings.warn(\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading video from URL\n",
-      "100% [..............................................................................] 48488 / 48488\n",
-      "Video downloaded\n",
-      "Downloading video from URL\n",
-      "100% [..............................................................................] 47732 / 47732\n",
-      "Video downloaded\n",
-      "Downloading video from URL\n",
-      "100% [..............................................................................] 51309 / 51309\n",
-      "Video downloaded\n"
-     ]
     }
    ],
    "source": [
-    "def get_vector_representation_of_video(video_links):\n",
-    "    \n",
-    "    result = []\n",
-    "    vid_vec_rep_clip.initialize({})\n",
-    "    for link in video_links:\n",
-    "        video = VideoFactory.make_from_url(link)\n",
-    "        vector = vid_vec_rep_clip.run(video)\n",
-    "        result.append(vector)\n",
-    "\n",
-    "    return result\n",
-    "\n",
-    "final_embeddings = get_vector_representation_of_video(video_links)\n",
-    "        \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Code to initialize Elastic search instance\n",
-    "\n",
-    "param_dict = {\n",
-    "    \"host_name\": \"es\",\n",
-    "    \"text_index_name\": \"text\",\n",
-    "    \"image_index_name\": \"image\",\n",
-    "    \"video_index_name\": \"video\",\n",
-    "    \"audio_index_name\": \"audio\",\n",
-    "}\n",
-    "\n",
-    "param = QueueConfig(\n",
-    "    label=\"test\",\n",
-    "    type=\"es\",\n",
-    "    parameters=StoreESParameters(\n",
-    "        host_name=param_dict[\"host_name\"],\n",
-    "        image_index_name=param_dict[\"image_index_name\"],\n",
-    "        text_index_name=param_dict[\"text_index_name\"],\n",
-    "        video_index_name=param_dict[\"video_index_name\"],\n",
-    "        audio_index_name=param_dict[\"audio_index_name\"],\n",
-    "    ),\n",
-    ")\n",
-    "es = ES(param)\n",
-    "es.connect()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Storing embeddings into Elastic Search"
+    "feluda = Feluda(\"config.yml\")\n",
+    "feluda.setup()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "en-speech.mp4 <generator object gendata at 0x738989a535a0>\n",
-      "----> 6 (2, [])\n",
-      "result: {'message': 'multiple media stored'}\n",
-      "hi-speech.mp4 <generator object gendata at 0x738989a52ce0>\n",
-      "----> 6 (2, [])\n",
-      "result: {'message': 'multiple media stored'}\n",
-      "ta-speech.mp4 <generator object gendata at 0x738989a534c0>\n",
-      "----> 6 (2, [])\n",
-      "result: {'message': 'multiple media stored'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "def generate_document(post_id: str, representation: any):\n",
-    "    base_doc = {\n",
-    "        \"e_kosh_id\": \"\",\n",
-    "        \"dataset\": post_id,\n",
-    "        \"metadata\": None,\n",
-    "        \"date_added\": datetime.now().isoformat(),\n",
-    "    }\n",
-    "\n",
-    "    def generator_doc():\n",
-    "        for vector in representation:\n",
-    "            base_doc[\"_index\"] = \"video\"\n",
-    "            base_doc[\"vid_vec\"] = vector[\"vid_vec\"]\n",
-    "            base_doc[\"is_avg\"] = vector[\"is_avg\"]\n",
-    "            yield base_doc\n",
-    "\n",
-    "    return generator_doc\n",
-    "\n",
-    "\n",
-    "for file_name,embedding in zip(file_names,final_embeddings):\n",
-    "    print(file_name,embedding)\n",
-    "    doc = generate_document(file_name,embedding)\n",
-    "    media_type = MediaType.VIDEO\n",
-    "    result = es.store(media_type, doc)\n",
-    "    print(\"result:\", result)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Checking if embeddings are stored correctly"
+    "if feluda.config.store:\n",
+    "    feluda.start_component(ComponentType.STORE)"
    ]
   },
   {
@@ -201,58 +67,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "health status index uuid                   pri rep docs.count docs.deleted store.size pri.store.size dataset.size\n",
-      "yellow open   video B1F4p1UGTMy-lFPMjw8g3g   1   1         44            0    834.1kb        834.1kb      834.1kb\n"
+      "Downloading video from URL\n",
+      "100% [....................................................] 48488 / 48488\n",
+      "Video downloaded\n",
+      "----> 6 (2, [])\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('result:', {'message': 'multiple media stored'})"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "!curl -X GET \"http://es:9200/_cat/indices?v\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Searching for a specific media"
+    "url = \"https://github.com/aatmanvaidya/audio-files/raw/main/feluda-media/en-speech.mp4\"\n",
+    "\n",
+    "feluda.store_video(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def search_video_vector(video_url):\n",
-    "\n",
-    "    file_name = video_url.split('/')[-1]\n",
-    "    video = VideoFactory.make_from_url(video_url)\n",
-    "    embedding = vid_vec_rep_clip.run(video)\n",
-    "    average_vector = next(embedding)\n",
-    "    search_result = es.find(\"video\", average_vector.get(\"vid_vec\"))\n",
-    "    print(\".\"*50)\n",
-    "    print(\"SEARCH RESULTS \\n : \")\n",
-    "    pp.pprint(search_result)\n",
-    "    file_found = False\n",
-    "    for result in search_result:\n",
-    "        if result.get(\"dataset\") == file_name:\n",
-    "            file_found = True\n",
-    "            break\n",
-    "    print(\".\"*50)\n",
-    "    if(file_found):\n",
-    "        print(f\"File {file_name} found in search result\")\n",
-    "    else:\n",
-    "        print(f\"File {file_name} not found in search result\")\n",
-    "\n",
-    "    \n",
-    "\n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -260,79 +100,47 @@
      "output_type": "stream",
      "text": [
       "Downloading video from URL\n",
-      "100% [..............................................................................] 48488 / 48488\n",
+      "100% [....................................................] 48488 / 48488\n",
       "Video downloaded\n",
-      "calculation: 1 / (1 + l2norm(params.query_vector, 'vid_vec'))\n",
-      "..................................................\n",
-      "SEARCH RESULTS \n",
-      " : \n",
-      "[   {   'dataset': 'en-speech.mp4',\n",
-      "        'dist': 0.9999998,\n",
-      "        'doc_id': 'XdQMqpIBbNdOPzkpIBHY',\n",
-      "        'e_kosh_id': '',\n",
-      "        'metadata': None,\n",
-      "        'text': None},\n",
-      "    {   'dataset': 'en-speech.mp4',\n",
-      "        'dist': 0.9999998,\n",
-      "        'doc_id': 'XtQMqpIBbNdOPzkpIBHa',\n",
-      "        'e_kosh_id': '',\n",
-      "        'metadata': None,\n",
-      "        'text': None},\n",
-      "    {   'dataset': 'en-speech.mp4',\n",
-      "        'dist': 0.9999998,\n",
-      "        'doc_id': 'QF_VqZIBOE8dDT7tnO5U',\n",
-      "        'e_kosh_id': '',\n",
-      "        'metadata': None,\n",
-      "        'text': None},\n",
-      "    {   'dataset': 'en-speech.mp4',\n",
-      "        'dist': 0.9999998,\n",
-      "        'doc_id': 'QV_VqZIBOE8dDT7tnO5U',\n",
-      "        'e_kosh_id': '',\n",
-      "        'metadata': None,\n",
-      "        'text': None},\n",
-      "    {   'dataset': 'en-speech.mp4',\n",
-      "        'dist': 0.9999998,\n",
-      "        'doc_id': 'Ol_AqZIBOE8dDT7tWe4r',\n",
-      "        'e_kosh_id': '',\n",
-      "        'metadata': None,\n",
-      "        'text': None},\n",
-      "    {   'dataset': 'en-speech.mp4',\n",
-      "        'dist': 0.9999998,\n",
-      "        'doc_id': 'O1_AqZIBOE8dDT7tWe4r',\n",
-      "        'e_kosh_id': '',\n",
-      "        'metadata': None,\n",
-      "        'text': None},\n",
-      "    {   'dataset': 'en-speech.mp4',\n",
-      "        'dist': 0.9999998,\n",
-      "        'doc_id': 'Rl_nqZIBOE8dDT7tB-6F',\n",
-      "        'e_kosh_id': '',\n",
-      "        'metadata': None,\n",
-      "        'text': None},\n",
-      "    {   'dataset': 'en-speech.mp4',\n",
-      "        'dist': 0.9999998,\n",
-      "        'doc_id': 'R1_nqZIBOE8dDT7tB-6F',\n",
-      "        'e_kosh_id': '',\n",
-      "        'metadata': None,\n",
-      "        'text': None},\n",
-      "    {   'dataset': 'hi-speech.mp4',\n",
-      "        'dist': 0.15991358,\n",
-      "        'doc_id': 'Ql_VqZIBOE8dDT7tnO5f',\n",
-      "        'e_kosh_id': '',\n",
-      "        'metadata': None,\n",
-      "        'text': None},\n",
-      "    {   'dataset': 'hi-speech.mp4',\n",
-      "        'dist': 0.15991358,\n",
-      "        'doc_id': 'Q1_VqZIBOE8dDT7tnO5f',\n",
-      "        'e_kosh_id': '',\n",
-      "        'metadata': None,\n",
-      "        'text': None}]\n",
-      "..................................................\n",
-      "File en-speech.mp4 found in search result\n"
+      "calculation: 1 / (1 + l2norm(params.query_vector, 'vid_vec'))\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'doc_id': 'TgLwrZIBZCwUx_cLbhBV',\n",
+       "  'dist': 0.9999998,\n",
+       "  'dataset': 'en-speech.mp4',\n",
+       "  'e_kosh_id': '',\n",
+       "  'text': None,\n",
+       "  'metadata': None},\n",
+       " {'doc_id': 'TwLwrZIBZCwUx_cLbhBX',\n",
+       "  'dist': 0.9999998,\n",
+       "  'dataset': 'en-speech.mp4',\n",
+       "  'e_kosh_id': '',\n",
+       "  'text': None,\n",
+       "  'metadata': None},\n",
+       " {'doc_id': 'UALyrZIBZCwUx_cL9hB2',\n",
+       "  'dist': 0.9999998,\n",
+       "  'dataset': 'en-speech.mp4',\n",
+       "  'e_kosh_id': '',\n",
+       "  'text': None,\n",
+       "  'metadata': None},\n",
+       " {'doc_id': 'UQLyrZIBZCwUx_cL9hB2',\n",
+       "  'dist': 0.9999998,\n",
+       "  'dataset': 'en-speech.mp4',\n",
+       "  'e_kosh_id': '',\n",
+       "  'text': None,\n",
+       "  'metadata': None}]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "search_video_vector(\"https://github.com/aatmanvaidya/audio-files/raw/main/feluda-media/en-speech.mp4\")"
+    "feluda.search_video(url)"
    ]
   },
   {
