minor notebook bug fix

--- a/src/notebooks/search_similar_videos.ipynb
+++ b/src/notebooks/search_similar_videos.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "import os\n",
-    "from core.feluda import Feluda,ComponentType"
+    "import os"
    ]
   },
   {
@@ -22,13 +21,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from core.feluda import Feluda,ComponentType"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[StoreEntity(label='Data Store', type='es_vec', parameters=StoreESParameters(host_name='es', image_index_name='image', text_index_name='text', video_index_name='video', audio_index_name='audio'))]\n",
       "Installing packages for vid_vec_rep_clip\n"
      ]
     },
@@ -37,9 +46,7 @@
      "output_type": "stream",
      "text": [
       "/usr/app/venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/usr/app/venv/lib/python3.11/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
-      "  warnings.warn(\n"
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
