moved functions to notebook

--- a/src/notebooks/search_similar_videos.ipynb
+++ b/src/notebooks/search_similar_videos.ipynb
@@ -25,7 +25,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from core.feluda import Feluda,ComponentType"
+    "from core.feluda import Feluda,ComponentType\n",
+    "from core.models.media import MediaType\n",
+    "from core.models.media_factory import VideoFactory\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -72,7 +75,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# self.config.operators.parameters[0].type"
+    "\n",
+    "def generate_document(post_id: str, representation: any):\n",
+    "    # This is specific to clip operator\n",
+    "    base_doc = {\n",
+    "        \"e_kosh_id\": \"\",\n",
+    "        \"dataset\": post_id,\n",
+    "        \"metadata\": None,\n",
+    "        \"date_added\": datetime.now().isoformat(),\n",
+    "    }\n",
+    "\n",
+    "    def generator_doc():\n",
+    "        for vector in representation:\n",
+    "            base_doc[\"_index\"] = \"video\"\n",
+    "            base_doc[\"vid_vec\"] = vector[\"vid_vec\"]\n",
+    "            base_doc[\"is_avg\"] = vector[\"is_avg\"]\n",
+    "            yield base_doc\n",
+    "\n",
+    "    return generator_doc\n",
+    "\n",
+    "def store_video(video_url):\n",
+    "    filename = video_url.split('/')[-1]\n",
+    "    video = VideoFactory.make_from_url(video_url)\n",
+    "    operator = feluda.operators.get()[feluda.config.operators.parameters[0].type]\n",
+    "    embedding = operator.run(video)\n",
+    "\n",
+    "    if feluda.store:\n",
+    "        doc = generate_document(filename,embedding)\n",
+    "        media_type = MediaType.VIDEO\n",
+    "        result = feluda.store[feluda.config.store.entities[0].type].store(media_type,doc)\n",
+    "        return(\"result:\",result)\n",
+    "    else:\n",
+    "        raise Exception(\"Store is not Configured\")\n",
+    "\n",
+    "def search_video(video_url):\n",
+    "    file_name = video_url.split('/')[-1]\n",
+    "    video = VideoFactory.make_from_url(video_url)\n",
+    "    operator = feluda.operators.get()[feluda.config.operators.parameters[0].type]\n",
+    "    embedding = operator.run(video)\n",
+    "    average_vector = next(embedding)\n",
+    "\n",
+    "    if feluda.store:\n",
+    "        result = feluda.store[feluda.config.store.entities[0].type].find(\"video\",average_vector.get(\"vid_vec\"))\n",
+    "        return result\n",
+    "    else:\n",
+    "        raise Exception(\"Store is not Configured\")\n"
    ]
   },
   {
@@ -104,7 +151,7 @@
    "source": [
     "url = \"https://github.com/aatmanvaidya/audio-files/raw/main/feluda-media/en-speech.mp4\"\n",
     "\n",
-    "feluda.store_video(url)"
+    "store_video(url)"
    ]
   },
   {
@@ -160,6 +207,30 @@
        "  'dataset': 'en-speech.mp4',\n",
        "  'e_kosh_id': '',\n",
        "  'text': None,\n",
+       "  'metadata': None},\n",
+       " {'doc_id': 'HguYs5IB5cv5tXZBTabw',\n",
+       "  'dist': 0.9999998,\n",
+       "  'dataset': 'en-speech.mp4',\n",
+       "  'e_kosh_id': '',\n",
+       "  'text': None,\n",
+       "  'metadata': None},\n",
+       " {'doc_id': 'HwuYs5IB5cv5tXZBTaby',\n",
+       "  'dist': 0.9999998,\n",
+       "  'dataset': 'en-speech.mp4',\n",
+       "  'e_kosh_id': '',\n",
+       "  'text': None,\n",
+       "  'metadata': None},\n",
+       " {'doc_id': 'IAuZs5IB5cv5tXZBj6Ys',\n",
+       "  'dist': 0.9999998,\n",
+       "  'dataset': 'en-speech.mp4',\n",
+       "  'e_kosh_id': '',\n",
+       "  'text': None,\n",
+       "  'metadata': None},\n",
+       " {'doc_id': 'IQuZs5IB5cv5tXZBj6Ys',\n",
+       "  'dist': 0.9999998,\n",
+       "  'dataset': 'en-speech.mp4',\n",
+       "  'e_kosh_id': '',\n",
+       "  'text': None,\n",
        "  'metadata': None}]"
       ]
      },
@@ -169,7 +240,7 @@
     }
    ],
    "source": [
-    "feluda.search_video(url)"
+    "search_video(url)"
    ]
   },
   {
