--- a/src/notebooks/04_plot_cluster_videos.ipynb
+++ b/src/notebooks/04_plot_cluster_videos.ipynb
@@ -305,8 +305,8 @@
    "source": [
     "# Using clustering algorithm\n",
     "\n",
-    "cluster = cluster_operator.run(operator_parameter,n_clusters=10,modality='video')\n",
-    "cluster = {key: cluster[key] for key in sorted(cluster)} # Sorted based on keys"
+    "clusters = cluster_operator.run(operator_parameter,n_clusters=10,modality='video')\n",
+    "clusters = {key: cluster[key] for key in sorted(cluster)} # Sorted based on keys"
    ]
   },
   {
@@ -432,7 +432,7 @@
     "        print(f\"Thumbnail not found for {video_filename}\")\n",
     "    return None\n",
     "\n",
-    "for cluster_label, video_paths in cluster.items():\n",
+    "for cluster_label, video_paths in clusters.items():\n",
     "    num_videos = len(video_paths)\n",
     "    \n",
     "    fig, axes = plt.subplots(1, num_videos, figsize=(20, 5))\n",
