made changes to heading

--- a/src/notebooks/04_plot_cluster_videos.ipynb
+++ b/src/notebooks/04_plot_cluster_videos.ipynb
@@ -310,6 +310,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "76ffd622-ae6a-4425-afdf-fc8c58578cb1",
+   "metadata": {},
+   "source": [
+    "### Visualizing Clusters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "id": "078b15a5-bbb9-46f3-a779-f9136b82b41f",
