removed unnecessary packages

--- a/src/notebooks/04_plot_cluster_videos.ipynb
+++ b/src/notebooks/04_plot_cluster_videos.ipynb
@@ -117,8 +117,7 @@
     "from core.models.media_factory import VideoFactory\n",
     "import cv2\n",
     "import tarfile\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.offsetbox import OffsetImage, AnnotationBbox"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -306,7 +305,7 @@
     "# Using clustering algorithm\n",
     "\n",
     "clusters = cluster_operator.run(operator_parameter,n_clusters=10,modality='video')\n",
-    "clusters = {key: cluster[key] for key in sorted(cluster)} # Sorted based on keys"
+    "clusters = {key: clusters[key] for key in sorted(clusters)} # Sorted based on keys"
    ]
   },
   {
