--- a/src/notebooks/05_classify_video_zeroshot.ipynb
+++ b/src/notebooks/05_classify_video_zeroshot.ipynb
@@ -306,8 +306,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "29a50a4a-a1f9-415f-9bfe-780c9427cab5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cleaning cell\n",
+    "\n",
+    "import shutil\n",
+    "\n",
+    "shutil.rmtree('UCF101_subset')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be3d6e78-1069-4d4b-b051-92370e26036c",
    "metadata": {},
    "outputs": [],
    "source": []
