made final changes

--- a/src/notebooks/05_classify_video_zeroshot.ipynb
+++ b/src/notebooks/05_classify_video_zeroshot.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "ad07d1a7-5e74-4604-aab4-6f53bca59dcd",
    "metadata": {},
    "outputs": [],
@@ -296,8 +296,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f6474ba5-fde0-4f6a-bb40-131f20eb3616",
+   "metadata": {},
+   "source": [
+    "classify_video_zero_shot operator output example that classifies video as BenchPress"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
+   "id": "f4cbb3e9-c732-4570-b00b-a3eea71defb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'prediction': 'BenchPress',\n",
+       " 'probs': [0.9991375207901001,\n",
+       "  3.822697181021795e-05,\n",
+       "  0.0007679276750423014,\n",
+       "  4.82338862184406e-07,\n",
+       "  4.184121644357219e-05,\n",
+       "  2.768897502392065e-07,\n",
+       "  4.026067472295836e-06,\n",
+       "  2.343201913390658e-06,\n",
+       "  3.3486812753835693e-06,\n",
+       "  3.938669578928966e-06]}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "operator_parameter[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "9c9b94d1-327f-4234-9273-2555a4a7642d",
    "metadata": {
     "scrolled": true
@@ -327,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "4f1591fe-f2ce-4d61-8574-105f609ae521",
    "metadata": {},
    "outputs": [
@@ -471,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "29a50a4a-a1f9-415f-9bfe-780c9427cab5",
    "metadata": {},
    "outputs": [],
