--- a/src/notebooks/05_classify_video_zeroshot.ipynb
+++ b/src/notebooks/05_classify_video_zeroshot.ipynb
@@ -150,8 +150,7 @@
     "from core.models.media_factory import VideoFactory\n",
     "import cv2\n",
     "import tarfile\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.offsetbox import OffsetImage, AnnotationBbox"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
