--- a/src/notebooks/06_find_text_in_newspaper.ipynb
+++ b/src/notebooks/06_find_text_in_newspaper.ipynb
@@ -28,10 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from core.feluda import Feluda\n",
     "from core.feluda import Feluda,ComponentType\n",
     "from core.models.media import MediaType\n",
-    "from core.models.media_factory import TextFactory, ImageFactory\n",
+    "from core.models.media_factory import ImageFactory\n",
     "from datetime import datetime"
    ]
   },
@@ -132,7 +131,6 @@
     "\n",
     "def search_text(text,operator):\n",
     "    embedding = operator.run(text)\n",
-    "    media_type = MediaType.TEXT\n",
     "    if feluda.store:\n",
     "        result = feluda.store[feluda.config.store.entities[0].type].find(\"text\",embedding)\n",
     "        return result\n",
