--- a/examples/01_video_embeddings_tsne_plot.ipynb
+++ b/examples/01_video_embeddings_tsne_plot.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "41d7b1c6-157e-4c28-b362-2119779c7909",
    "metadata": {},
    "outputs": [
@@ -55,14 +55,14 @@
     }
    ],
    "source": [
-    "from feluda import Feluda\n",
-    "from feluda.models.media_factory import VideoFactory\n",
+    "# from feluda import Feluda\n",
+    "# from feluda.models.media_factory import VideoFactory\n",
     "\n",
-    "from huggingface_hub import hf_hub_download\n",
-    "import cv2\n",
-    "import tarfile\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.offsetbox import OffsetImage, AnnotationBbox"
+    "# from huggingface_hub import hf_hub_download\n",
+    "# import cv2\n",
+    "# import tarfile\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# from matplotlib.offsetbox import OffsetImage, AnnotationBbox"
    ]
   },
   {
