chore: format notebook

--- a/examples/01_plot_tsne_videos.ipynb
+++ b/examples/01_plot_tsne_videos.ipynb
@@ -34,17 +34,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from huggingface_hub import hf_hub_download\n",
-    "import tarfile\n",
-    "import cv2\n",
-    "from feluda import Feluda\n",
     "import os\n",
+    "import tarfile\n",
     "from pathlib import Path\n",
-    "from feluda.models.media_factory import VideoFactory\n",
+    "\n",
+    "import cv2\n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib.offsetbox import OffsetImage, AnnotationBbox\n",
     "import numpy as np\n",
-    "from tqdm.notebook import tqdm"
+    "from huggingface_hub import hf_hub_download\n",
+    "from matplotlib.offsetbox import AnnotationBbox, OffsetImage\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "from feluda import Feluda\n",
+    "from feluda.models.media_factory import VideoFactory"
    ]
   },
   {
@@ -64,7 +66,7 @@
    ],
    "source": [
     "# Initialize Feluda and the operators\n",
-    "feluda = Feluda('01_plot_tsne_videos_config.yml')\n",
+    "feluda = Feluda(\"01_plot_tsne_videos_config.yml\")\n",
     "feluda.setup()\n",
     "\n",
     "dimension_reduction_operator = feluda.operators.get()[\"dimension_reduction\"]\n",
@@ -89,13 +91,13 @@
     "# Download and extract dataset\n",
     "if not os.path.exists(\"UCF101_subset\"):\n",
     "    print(\"Downloading dataset...\")\n",
-    "    \n",
+    "\n",
     "    file_path = hf_hub_download(\n",
     "        repo_id=\"sayakpaul/ucf101-subset\",\n",
     "        filename=\"UCF101_subset.tar.gz\",\n",
-    "        repo_type=\"dataset\"\n",
+    "        repo_type=\"dataset\",\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    with tarfile.open(file_path) as t:\n",
     "        t.extractall(\".\")"
    ]
@@ -122,15 +124,15 @@
     "def get_video_thumbnail(video_path):\n",
     "    \"\"\"Extract and save thumbnail from video.\"\"\"\n",
     "    thumbnail_path = thumbnail_dir / f\"{Path(video_path).stem}_thumbnail.jpg\"\n",
-    "    \n",
+    "\n",
     "    # Return existing thumbnail if available\n",
     "    if thumbnail_path.exists():\n",
     "        return str(thumbnail_path)\n",
-    "        \n",
+    "\n",
     "    cap = cv2.VideoCapture(str(video_path))\n",
     "    ret, frame = cap.read()\n",
     "    cap.release()\n",
-    "    \n",
+    "\n",
     "    if ret:\n",
     "        cv2.imwrite(str(thumbnail_path), frame)\n",
     "        return str(thumbnail_path)\n",
@@ -158,6 +160,7 @@
     "    for path in Path(base_dir).rglob(\"*.avi\"):\n",
     "        video_paths.append(str(path))\n",
     "    return video_paths\n",
+    "\n",
     "\n",
     "# Get all video paths\n",
     "video_paths = get_all_video_paths()\n",
@@ -203,17 +206,19 @@
     "    try:\n",
     "        # Get video thumbnail\n",
     "        thumbnail_path = get_video_thumbnail(video_path)\n",
-    "        \n",
+    "\n",
     "        # Get video embedding\n",
     "        video = VideoFactory.make_from_file_on_disk(video_path)\n",
     "        embedding = vid_vec_clip_operator.run(video)\n",
     "        average_vector = next(embedding)\n",
-    "        \n",
-    "        operator_parameters.append({\n",
-    "            \"payload\": video_path,\n",
-    "            \"embedding\": average_vector.get(\"vid_vec\"),\n",
-    "            \"thumbnail_path\": thumbnail_path\n",
-    "        })\n",
+    "\n",
+    "        operator_parameters.append(\n",
+    "            {\n",
+    "                \"payload\": video_path,\n",
+    "                \"embedding\": average_vector.get(\"vid_vec\"),\n",
+    "                \"thumbnail_path\": thumbnail_path,\n",
+    "            }\n",
+    "        )\n",
     "    except Exception as e:\n",
     "        print(f\"Error processing {video_path}: {e}\")\n",
     "        continue\n",
@@ -250,45 +255,51 @@
     }
    ],
    "source": [
-    "x = np.array([item['reduced_embedding'][0] for item in data])\n",
-    "y = np.array([item['reduced_embedding'][1] for item in data])\n",
+    "x = np.array([item[\"reduced_embedding\"][0] for item in data])\n",
+    "y = np.array([item[\"reduced_embedding\"][1] for item in data])\n",
+    "\n",
     "\n",
     "def jitter(arr, jitter_amount=0.02):\n",
     "    return arr + np.random.uniform(-jitter_amount, jitter_amount, arr.shape)\n",
     "\n",
-    "x_jittered = jitter(x, jitter_amount=0.3) \n",
+    "\n",
+    "x_jittered = jitter(x, jitter_amount=0.3)\n",
     "y_jittered = jitter(y, jitter_amount=0.3)\n",
     "\n",
     "plt.figure(figsize=(20, 16))\n",
     "plt.scatter(x_jittered, y_jittered)\n",
     "\n",
+    "\n",
     "def load_thumbnail(payload):\n",
     "    \"\"\"Load the thumbnail from the pre-saved thumbnail folder.\"\"\"\n",
-    "    video_filename = os.path.basename(payload) \n",
-    "    thumbnail_filename = video_filename.replace('.avi', '_thumbnail.jpg')\n",
+    "    video_filename = os.path.basename(payload)\n",
+    "    thumbnail_filename = video_filename.replace(\".avi\", \"_thumbnail.jpg\")\n",
     "    thumbnail_path = os.path.join(thumbnail_dir, thumbnail_filename)\n",
-    "    \n",
+    "\n",
     "    if os.path.exists(thumbnail_path):\n",
     "        return cv2.imread(thumbnail_path)\n",
     "    else:\n",
     "        print(f\"Thumbnail not found for {video_filename}\")\n",
     "    return None\n",
     "\n",
+    "\n",
     "for i, item in enumerate(data):\n",
-    "    video_thumbnail = load_thumbnail(item['payload'])\n",
-    "    \n",
+    "    video_thumbnail = load_thumbnail(item[\"payload\"])\n",
+    "\n",
     "    if video_thumbnail is not None:\n",
     "        video_thumbnail = cv2.resize(video_thumbnail, (100, 100))  # Smaller thumbnails\n",
     "        video_thumbnail = cv2.cvtColor(video_thumbnail, cv2.COLOR_BGR2RGB)\n",
-    "        \n",
+    "\n",
     "        # Keep zoom as is, no need for offsets anymore\n",
     "        imagebox = OffsetImage(video_thumbnail, zoom=0.5)\n",
-    "        ab = AnnotationBbox(imagebox, (x_jittered[i], y_jittered[i]), frameon=False)  # Use jittered values\n",
+    "        ab = AnnotationBbox(\n",
+    "            imagebox, (x_jittered[i], y_jittered[i]), frameon=False\n",
+    "        )  # Use jittered values\n",
     "\n",
     "        plt.gca().add_artist(ab)\n",
     "\n",
     "# Set labels and title\n",
-    "plt.title('t-SNE Reduced Embeddings with Video Thumbnails')\n",
+    "plt.title(\"t-SNE Reduced Embeddings with Video Thumbnails\")\n",
     "\n",
     "plt.show()"
    ]
@@ -303,8 +314,8 @@
     "# Cleaning cell\n",
     "import shutil\n",
     "\n",
-    "shutil.rmtree('thumbnails')\n",
-    "shutil.rmtree('UCF101_subset')\n",
+    "shutil.rmtree(\"thumbnails\")\n",
+    "shutil.rmtree(\"UCF101_subset\")\n",
     "os.remove(file_path)"
    ]
   },
