chore: fix formatting of example notebook

--- a/examples/02_plot_cluster_videos.ipynb
+++ b/examples/02_plot_cluster_videos.ipynb
@@ -37,8 +37,9 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import cv2\n",
     "import tarfile\n",
+    "\n",
+    "import cv2\n",
     "import matplotlib.pyplot as plt\n",
     "from huggingface_hub import hf_hub_download\n",
     "\n",
@@ -80,16 +81,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Downloading and extracting \n",
+    "# Downloading and extracting\n",
     "\n",
     "dataset_name = \"UCF101_subset/train\"\n",
     "hf_dataset_identifier = \"sayakpaul/ucf101-subset\"\n",
     "filename = \"UCF101_subset.tar.gz\"\n",
-    "file_path = hf_hub_download(repo_id=hf_dataset_identifier, filename=filename, repo_type=\"dataset\")\n",
+    "file_path = hf_hub_download(\n",
+    "    repo_id=hf_dataset_identifier, filename=filename, repo_type=\"dataset\"\n",
+    ")\n",
     "\n",
     "\n",
     "with tarfile.open(file_path) as t:\n",
-    "     t.extractall(\".\")"
+    "    t.extractall(\".\")"
    ]
   },
   {
@@ -142,8 +145,8 @@
     "feluda.setup()\n",
     "\n",
     "# Extracting operator name from config and getting operators from Feluda\n",
-    "cluster_operator = feluda.operators.get()['cluster_embeddings'] \n",
-    "vid_vec_clip_operator = feluda.operators.get()['vid_vec_rep_clip']"
+    "cluster_operator = feluda.operators.get()[\"cluster_embeddings\"]\n",
+    "vid_vec_clip_operator = feluda.operators.get()[\"vid_vec_rep_clip\"]"
    ]
   },
   {
@@ -158,7 +161,9 @@
     "    cap = cv2.VideoCapture(video_path)\n",
     "    ret, frame = cap.read()  # Read the first frame\n",
     "    if ret:\n",
-    "        thumbnail_path = os.path.join(save_path, os.path.basename(video_path).replace('.avi', '_thumbnail.jpg'))\n",
+    "        thumbnail_path = os.path.join(\n",
+    "            save_path, os.path.basename(video_path).replace(\".avi\", \"_thumbnail.jpg\")\n",
+    "        )\n",
     "        cv2.imwrite(thumbnail_path, frame)  # Save the thumbnail as a JPEG\n",
     "        cap.release()\n",
     "        return thumbnail_path  # Return the path to the saved thumbnail\n",
@@ -182,34 +187,38 @@
    "outputs": [],
    "source": [
     "operator_parameter = []\n",
-    "sub_folder_name = os.listdir(f'{dataset_name}')\n",
+    "sub_folder_name = os.listdir(f\"{dataset_name}\")\n",
     "\n",
     "for class_dir in sub_folder_name:\n",
     "    temp_list = os.listdir(os.path.join(dataset_name, class_dir))\n",
     "\n",
     "    i = 0\n",
     "    while i < len(temp_list) and i < 5:\n",
-    "        if temp_list[i] == 'UCF101':\n",
-    "            i += 1 \n",
+    "        if temp_list[i] == \"UCF101\":\n",
+    "            i += 1\n",
     "            continue\n",
-    "            \n",
+    "\n",
     "        video_full_path = os.path.join(dataset_name, class_dir, temp_list[i])\n",
     "\n",
     "        # Extract and save the video thumbnail before processing\n",
-    "        thumbnail_save_dir = 'thumbnails'\n",
-    "        os.makedirs(thumbnail_save_dir, exist_ok=True) \n",
+    "        thumbnail_save_dir = \"thumbnails\"\n",
+    "        os.makedirs(thumbnail_save_dir, exist_ok=True)\n",
     "        thumbnail_path = get_video_thumbnail(video_full_path, thumbnail_save_dir)\n",
-    "        \n",
+    "\n",
     "        video_path = VideoFactory.make_from_file_on_disk(\n",
     "            os.path.join(dataset_name, class_dir, temp_list[i])\n",
     "        )\n",
     "        embedding = vid_vec_clip_operator.run(video_path)\n",
     "        average_vector = next(embedding)\n",
-    "        \n",
-    "        operator_parameter.append({\n",
-    "            \"payload\": os.path.join(dataset_name, class_dir, temp_list[i]),  # Use the current item as the payload\n",
-    "            \"embedding\": average_vector.get(\"vid_vec\"),\n",
-    "        })\n",
+    "\n",
+    "        operator_parameter.append(\n",
+    "            {\n",
+    "                \"payload\": os.path.join(\n",
+    "                    dataset_name, class_dir, temp_list[i]\n",
+    "                ),  # Use the current item as the payload\n",
+    "                \"embedding\": average_vector.get(\"vid_vec\"),\n",
+    "            }\n",
+    "        )\n",
     "        i += 1"
    ]
   },
@@ -230,8 +239,8 @@
    "source": [
     "# Using clustering algorithm\n",
     "\n",
-    "clusters = cluster_operator.run(operator_parameter,n_clusters=10,modality='video')\n",
-    "clusters = {key: clusters[key] for key in sorted(clusters)} # Sorted based on keys"
+    "clusters = cluster_operator.run(operator_parameter, n_clusters=10, modality=\"video\")\n",
+    "clusters = {key: clusters[key] for key in sorted(clusters)}  # Sorted based on keys"
    ]
   },
   {
@@ -350,33 +359,37 @@
     }
    ],
    "source": [
-    "thumbnail_folder = 'thumbnails'\n",
+    "thumbnail_folder = \"thumbnails\"\n",
+    "\n",
     "\n",
     "def load_thumbnail(payload):\n",
     "    \"\"\"Load the thumbnail from the pre-saved thumbnail folder.\"\"\"\n",
     "    video_filename = os.path.basename(payload)\n",
-    "    thumbnail_filename = video_filename.replace('.avi', '_thumbnail.jpg')\n",
+    "    thumbnail_filename = video_filename.replace(\".avi\", \"_thumbnail.jpg\")\n",
     "    thumbnail_path = os.path.join(thumbnail_folder, thumbnail_filename)\n",
-    "    \n",
+    "\n",
     "    if os.path.exists(thumbnail_path):\n",
     "        return cv2.imread(thumbnail_path)\n",
     "    else:\n",
     "        print(f\"Thumbnail not found for {video_filename}\")\n",
     "    return None\n",
     "\n",
+    "\n",
     "for cluster_label, video_paths in clusters.items():\n",
     "    num_videos = len(video_paths)\n",
-    "    \n",
+    "\n",
     "    fig, axes = plt.subplots(1, num_videos, figsize=(20, 5))\n",
     "\n",
     "    for i, video_path in enumerate(video_paths):\n",
     "        video_thumbnail = load_thumbnail(video_path)\n",
     "        if video_thumbnail is not None:\n",
-    "            video_thumbnail = cv2.cvtColor(cv2.resize(video_thumbnail, (80, 80)), cv2.COLOR_BGR2RGB)\n",
+    "            video_thumbnail = cv2.cvtColor(\n",
+    "                cv2.resize(video_thumbnail, (80, 80)), cv2.COLOR_BGR2RGB\n",
+    "            )\n",
     "            axes[i].imshow(video_thumbnail)\n",
-    "            axes[i].axis('off')\n",
-    "    \n",
-    "    plt.suptitle(f'{cluster_label}', fontsize=16)\n",
+    "            axes[i].axis(\"off\")\n",
+    "\n",
+    "    plt.suptitle(f\"{cluster_label}\", fontsize=16)\n",
     "    plt.tight_layout()\n",
     "    plt.subplots_adjust(top=0.85)\n",
     "    plt.show()"
@@ -392,8 +405,8 @@
     "# Cleaning cell\n",
     "import shutil\n",
     "\n",
-    "shutil.rmtree('thumbnails')\n",
-    "shutil.rmtree('UCF101_subset')\n",
+    "shutil.rmtree(\"thumbnails\")\n",
+    "shutil.rmtree(\"UCF101_subset\")\n",
     "os.remove(file_path)"
    ]
   },
