fix colab dependencies

--- a/examples/01_plot_tsne_videos.ipynb
+++ b/examples/01_plot_tsne_videos.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ca273961-21a0-44c3-9936-bd5f9209e1d4",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,13 @@
     "print(\"Running Notebook in Google Colab\" if IN_COLAB else \"Running Notebook locally\")\n",
     "\n",
     "if IN_COLAB:\n",
-    "    !pip install feluda feluda-vid-vec-rep-clip feluda-dimension-reduction opencv-python matplotlib\n",
+    "    # Since Google Colab has preinstalled libraries like tensorflow and numba, we create a folder called feluda_custom_venv and isolate the environment there.\n",
+    "    # This is done to avoid any conflicts with the preinstalled libraries.\n",
+    "    !pip install uv\n",
+    "    !mkdir -p /content/feluda_custom_venv\n",
+    "    !uv pip install --target=/content/feluda_custom_venv --prerelease allow feluda feluda-vid-vec-rep-clip feluda-dimension-reduction opencv-python matplotlib\n",
+    "\n",
+    "    sys.path.insert(0, \"/content/feluda_custom_venv\")\n",
     "else:\n",
     "    !uv pip install feluda feluda-vid-vec-rep-clip feluda-dimension-reduction opencv-python matplotlib"
    ]
