capture installation output only

--- a/examples/01_plot_tsne_videos.ipynb
+++ b/examples/01_plot_tsne_videos.ipynb
@@ -53,11 +53,11 @@
     "    # This is done to avoid any conflicts with the preinstalled libraries.\n",
     "    !pip install uv\n",
     "    !mkdir -p /content/feluda_custom_venv\n",
-    "    !uv pip install --target=/content/feluda_custom_venv --prerelease allow feluda feluda-vid-vec-rep-clip feluda-dimension-reduction opencv-python matplotlib\n",
+    "    !uv pip install --target=/content/feluda_custom_venv --prerelease allow feluda feluda-vid-vec-rep-clip feluda-dimension-reduction opencv-python matplotlib > /dev/null 2>&1\n",
     "\n",
     "    sys.path.insert(0, \"/content/feluda_custom_venv\")\n",
     "else:\n",
-    "    !uv pip install feluda feluda-vid-vec-rep-clip feluda-dimension-reduction opencv-python matplotlib"
+    "    !uv pip install feluda feluda-vid-vec-rep-clip feluda-dimension-reduction opencv-python matplotlib > /dev/null 2>&1"
    ]
   },
   {
